# verbosa

./: .gitignore  pyproject.toml
tests/: manual_test.py  pandas_api_type.py  see_loggers.py  test_column_config_api.py
tests/assets/examples/configs/: column_norm_config.yaml  logs_config.yaml
tests/assets/examples/data/: client.csv
tests/assets/examples/queries/: basic_table_query.sql
tests/fixtures/: dataframes_test.py  dictionaries_test.py  queries_test.py  secrets_test.py
tests/interfaces/: column_config_test.py  columns_config_test.py
tests/normalizers/: tabular_data_test.py
tests/readers/: athena_reader_test.py
tests/utils/: config.py
tests/widgets/: selection_menu_test.py
verbosa/: __init__.py
verbosa/assets/examples/: client_data.csv  column_norm_config.yaml
verbosa/assets/examples/configs/: column_norm_config.yaml  logs_config.yaml
verbosa/assets/examples/data/: client_modified.csv  client_test.csv
verbosa/data/comparators/: tabular_data.py
verbosa/data/normalizers/: tabular_data.py
verbosa/data/readers/: aws.py  local.py
verbosa/data/reviewers/: tabular_data.py
verbosa/interfaces/: aws.py  cell.py  column_config.py  columns_config.py  normalizer.py  reviewer.py
verbosa/utils/: global_typings.py  logger_machine.py  serialization_helpers.py  typings.py  validation_helpers.py
verbosa/widgets/: selection_menu.py
